--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <!---->
   <!-- script src="p5.sound.js"></script -->
   <script type="text/javascript" src="dialog.js"></script>
+  <script type="text/javascript" src="passage.js"></script>
   <!-- this line removes any default padding and style. you might only need one of these values set. -->
   <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
