--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <script type="text/javascript" src="p5.js"></script>
-  <script type="text/javascript" src="p5.sound.js"></script>
-  <script type="text/javascript" src="p5.easycam.js"></script>
+  <script type="text/javascript" src="lib/p5.js"></script>
+  <script type="text/javascript" src="lib/p5.sound.js"></script>
+  <script type="text/javascript" src="lib/p5.easycam.js"></script>
   <!-- uncomment lines below to include extra p5 libraries -->
   <!---->
   <!-- script src="p5.sound.js"></script -->
