adjust textFrame to be more accurate

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <script type="text/javascript" src="dialogbox.js"></script>
   <!-- this line removes any default padding and style. you might only need one of these values set. -->
   <link rel="stylesheet" type="text/css" href="style.css"/>
+  <title>💬 dialog system</title>
 </head>
 
 <body>
